chore: added start command
Signed-off-by: MrDeivi <dalfonsogcia@gmail.com>

--- a/proxy/package.json
+++ b/proxy/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "scripts": {
     "dev": "nitropack dev",
-    "build": "nitropack build"
+    "build": "nitropack build",
+    "start": "node ./.output/server/index.mjs"
   },
   "devDependencies": {
     "nitropack": "^2.4.1",
