--- a/proxy/package.json
+++ b/proxy/package.json
@@ -6,8 +6,14 @@
     "start": "node ./.output/server/index.mjs"
   },
   "devDependencies": {
+    "@vercel/edge": "^1.1.1",
     "nitropack": "^2.4.1",
     "ofetch": "^1.0.1",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "@fullerstack/nax-ipware": "^0.10.0",
+    "@upstash/ratelimit": "^1.1.3",
+    "@vercel/kv": "^1.0.1"
   }
 }
