--- a/proxy/package.json
+++ b/proxy/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fullerstack/nax-ipware": "^0.10.0",
     "@upstash/ratelimit": "^1.1.3",
+    "@upstash/redis": "^1.30.0",
     "@vercel/kv": "^1.0.1"
   }
 }
